[overview] Fix overview transactions spacing (#1794)

--- a/app/style/HomePage.less
+++ b/app/style/HomePage.less
@@ -58,7 +58,8 @@
   left: 0px;
   padding: 16px 60px 30px 60px;
   background-color: var(--background-container);
-  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 .overview-balance-spendable-locked {
@@ -83,10 +84,9 @@
 }
 
 .recent-transactions {
-  float: left;
-  width: 352px;
   margin-right: 41px;
   margin-top: 27px;
+  width: 50%;
 }
 
 .home-content-title {
@@ -110,14 +110,8 @@
   color: var(--input-color-default);
 }
 
-.home-content-nest .overview-no-tickets > a,
-.home-content-nest .overview-no-transactions > a {
-  width: 85%;
-}
-
 .overview-no-transactions > a,
 .overview-no-tickets > a {
-  width: 50%;
   display: block;
   background-color: var(--background-back-color);
   padding: 20px 20px 20px 48px;
